--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/177/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/177/index.mdx
@@ -63,27 +63,27 @@ Cette nouvelle version majeure de Storybook apporte de nombreuses améliorations
 - 💸 [Dive into React PDF viewing with Apryse. Seamless integration with PDF.js for an elevated experience. Learn more from our blog.](https://apryse.com/blog/react/building-react-pdf-viewer-with-pdfjs?utm_source=emailnewsletter3&utm_medium=email)
 - 🐦 [Sebastian Markbåge recommends to use package.json “imports” for dependency injection instead of Context](https://twitter.com/sebmarkbage/status/1765828741500981475)
 - 👀 [React Core PR - Add Diffs to Hydration Warnings](https://github.com/facebook/react/pull/28512) : L'équipe React travaille sur l'amélioration des messages d'erreur d'hydratation de React en affichant un diff. Vous pouvez obtenir un 🐦 [aperçu](https://twitter.com/sebastienlorber/status/1765666127558918243) depuis les tests unitaires.
-- 👀 [React 19 - its not fine](https://github.com/facebook/react/pull/28524) : React 19 🐦 [casse le package « its-fine »] (https://twitter.com/0xca0a/status/1766032105807483261), notamment utilisé pour faire le pont du contexte React d'un moteur de rendu à l'autre. Il semble que l'équipe React étudie la possibilité d'apporter une prise en charge de première classe pour cette fonctionnalité, bien que cela semble être un problème difficile à résoudre.
-- 👀 [Next.js PR merged - add Lightning CSS](https://github.com/vercel/next.js/pull/61327) : A new experimental opt-in CSS loader should be available soon.
-- 👀 [Remix RFC - Action Functions](https://github.com/remix-run/remix/discussions/9020) : new RFC suggests to implement React actions functions and reduce indirection/boilerplate. It should be implemented first on the client-side, and later add support for RPC “use server” directive.
+- 👀 [React 19 - its not fine](https://github.com/facebook/react/pull/28524) : React 19 🐦 [casse le package « its-fine »](https://twitter.com/0xca0a/status/1766032105807483261), notamment utilisé pour faire le pont du contexte React d'un moteur de rendu à l'autre. Il semble que l'équipe React étudie la possibilité d'apporter une prise en charge de première classe pour cette fonctionnalité, bien que cela semble être un problème difficile à résoudre.
+- 👀 [Next.js PR merged - add Lightning CSS](https://github.com/vercel/next.js/pull/61327) : Un nouveau chargeur CSS expérimental opt-in devrait être disponible prochainement.
+- 👀 [Remix RFC - Action Functions](https://github.com/remix-run/remix/discussions/9020) : La nouvelle RFC propose d'implémenter les React actions functions et de réduire indirection/boilerplate. Il devrait être mis en œuvre d'abord côté client, et plus tard ajouté la prise en charge de la directive RPC « use server ».
 - 👀 [Vercel - Support for Remix + Vite](https://vercel.com/changelog/support-for-remix-with-vite)
-- 📖 [The Framework Field Guide](https://unicorn-utterances.com/collections/framework-field-guide) : A polished three-part series of books that teaches you Angular, React and Vue all at once, helping you figure out the differences between frameworks, and including many interactive examples. The first part "Fundamentals" is available.
-- 📅 [React Paris - 22 March](https://react.paris/) : Next week I'll go to React Paris, and hope to meet some of you there. The conference is sold-out but you can still watch it online with a [-20% discount](https://ti.to/bejs/react-paris/discount/this-week-in-react).
-- 📜 [React Compiler & React 19 - forget about memoization soon?](https://www.developerway.com/posts/react-compiler-soon) : Great overview of what we know about the upcoming compiler, its release timeframe and what kind of React code we might get rid of.
-- 📜 [Navigating the future of frontend](https://frontendmastery.com/posts/navigating-the-future-of-frontend/) : Well-documented article to better understand the current direction of the frontend ecosystem, including React with its Server Components.
-- 📜 [Component Testing with SafeTest vs. Cypress vs. WebdriverIO](https://bromann.dev/post/safetest-vs-cypress-vs-webdriverio) : The newly released Netflix SafeTest framework was recently roasted by competitors in 2 detailed articles, illustrated with React test examples.
-- 📜 [A Next.js package for managing third-party libraries](https://developer.chrome.com/blog/next-third-parties) : Presents the work of the Chrome Aurora team, notably the @next/third-parties package that enables you to efficiently load third-party scripts and embeds in a Next.js project
-- 📜 [Implicit Assertions](https://www.epicweb.dev/implicit-assertions) : Explains why a React render smoke test remains useful.
+- 📖 [The Framework Field Guide](https://unicorn-utterances.com/collections/framework-field-guide) : Une série de livres en trois parties qui vous apprend Angular, React et Vue en une seule fois, en vous aidant à comprendre les différences entre les frameworks et en incluant de nombreux exemples interactifs. La première partie « Fundamentals » est disponible.
+- 📅 [React Paris - 22 March](https://react.paris/) : La semaine prochaine, j'irai à React Paris, et j'espère y rencontrer certains d'entre vous. La conférence est complète mais vous pouvez toujours la regarder en ligne avec une [réduction de 20 %](https://ti.to/bejs/react-paris/discount/this-week-in-react).
+- 📜 [React Compiler & React 19 - forget about memoization soon?](https://www.developerway.com/posts/react-compiler-soon) : Excellent aperçu des informations dont nous disposons sur le compilateur à venir, son calendrier de publication et le type de code React dont nous pourrions nous débarrasser.
+- 📜 [Navigating the future of frontend](https://frontendmastery.com/posts/navigating-the-future-of-frontend/) : Article bien documenté pour mieux comprendre l'orientation actuelle de l'écosystème frontend, y compris React avec ses Server Components.
+- 📜 [Component Testing with SafeTest vs. Cypress vs. WebdriverIO](https://bromann.dev/post/safetest-vs-cypress-vs-webdriverio) : Le framework Netflix SafeTest, récemment sorti, a été récemment décortiqué par rapport à des concurrents dans 2 articles détaillés, illustrés par des exemples de tests React.
+- 📜 [A Next.js package for managing third-party libraries](https://developer.chrome.com/blog/next-third-parties) : Présente le travail de l'équipe Chrome Aurora, notamment le package @next/third-parties qui permet de charger efficacement des scripts tiers et des intégrations dans un projet Next.js
+- 📜 [Implicit Assertions](https://www.epicweb.dev/implicit-assertions) : Explique pourquoi un test de fumée (« smoke test ») de rendu de React reste utile.
 - 📜 [You can now deploy the Remotion Studio](https://www.remotion.dev/blog/deployable-studio)
 - 📜 [How To Transform ReactJS Animation into Video - The Lightweight Version of Remotion](https://medium.com/numatic-ventures/how-to-transform-reactjs-animation-into-video-the-lightweight-version-of-remotion-25706b1e0251?sk=a979e3131d85e8de4f2666b134eea1ec)
 - 📜 [How to safely use dangerouslySetInnerHTML in React](https://deadsimplechat.com/blog/how-to-safely-use-dangerouslysetinnerhtml-in-react/)
 - 📜 [Progressively Enhance Handling Your Forms With React.js Server Actions](https://techhub.iodigital.com/articles/progressively-enhance-handling-your-forms-with-react-js-server-actions)
 - 📜 [Best Practices for Writing Tests with React Testing Library](https://claritydev.net/blog/improving-react-testing-library-tests)
-- 📦 [WinterJS 1.0 - WinterCG-compatible JS runtime built on Rust and SpiderMonkey](https://wasmer.io/posts/winterjs-v1) : this new runtime claims to be the fastest, and can now run Next.js. A Hacker News RSC demo is available, and they plan to migrate their own Next.js frontend to it soon.
-- 📦 [React Geiger](https://github.com/kristiandupont/react-geiger) : It’s like the audio version of WhyDidYouRender, emitting little audio farts whenever React re-renders. That’s a fun idea, but could actually be useful too.
-- 📦 [MistCSS - Write React components using CSS only](https://typicode.github.io/mistcss/) : A crazy JS-from-CSS tool that permits to generate React components directly from CSS files, including Tailwind support 🤪.
+- 📦 [WinterJS 1.0 - WinterCG-compatible JS runtime built on Rust and SpiderMonkey](https://wasmer.io/posts/winterjs-v1) : ce nouveau runtime prétend être le plus rapide, et peut maintenant exécuter Next.js. Une démo de Hacker News RSC est disponible, et ils prévoient de migrer leur propre frontend Next.js vers celui-ci prochainement.
+- 📦 [React Geiger](https://github.com/kristiandupont/react-geiger) : C'est comme la version audio de WhyDidYouRender, émettant de petits pets audio à chaque fois que React effectue un nouveau rendu. C'est une idée amusante, mais qui pourrait aussi être utile.
+- 📦 [MistCSS - Write React components using CSS only](https://typicode.github.io/mistcss/) : Un outil JS-from-CSS délirant qui permet de générer des composants React directement à partir de fichiers CSS, incluant la prise en charge de Tailwind 🤪.
 - 📦 [Shadcn/ui - March 2024 Update - New components: Breadcrumb, One-Time-Password Input](https://ui.shadcn.com/docs/changelog)
-- 📦 [MDXTS (Beta) - The Content & Documentation SDK for React](https://www.mdxts.dev/) : “It's sort of a mashup of Contentlayer + Storybook”
+- 📦 [MDXTS (Beta) - The Content & Documentation SDK for React](https://www.mdxts.dev/) : « Il s'agit en quelque sorte d'un mélange de Contentlayer et de Storybook ».
 - 📦 [Astro 4.5 - Dev Audit UI, View Transition improvements, Multi-CDN, Shiki 1.0…](https://astro.build/blog/astro-450/)
 - 📦 [Remix-Dev-Tools 4.0 - now Vite/ESM-only, new docs site](https://github.com/Code-Forge-Net/Remix-Dev-Tools/releases/tag/v4.0.0)
 - 📦 [BlockNote 0.12 - Block-Based rich text editor - New website and features](https://www.blocknotejs.org/)
@@ -120,15 +120,15 @@ Cette section est désormais co-écrite avec [Benedikt](https://twitter.com/bndk
 
 🎥 [**William Candillon - Time to Fly - React Native Skia 1.0**](https://www.youtube.com/watch?v=eUbj_NxcgKg)
 
-Exciting major release of React Native Skia, with an inspiring launch video! This library was first released back in 2021 by William Candillon and Christian Falch and has been heavily supported by Shopify for a long time. Now, they’ve finally released a 1.0 and it’s packed with improvements and new features: Thanks to a new Paragraph API, Skia can now render rich text layouts, combining system fonts and custom fonts. Animations Hooks make it easier to build performant animations with the already existing RN Reanimated and Gesture Handler integration. Another highlight for me personally: RN Skia now also supports the web as a platform, via a package called canvaskit-js!
+Une version majeure de React Native Skia, avec une vidéo de lancement inspirante ! Cette bibliothèque a été publiée pour la première fois en 2021 par William Candillon et Christian Falch et a été fortement soutenue par Shopify pendant longtemps. Aujourd'hui, ils ont finalement publié une version 1.0 et elle est remplie d'améliorations et de nouvelles fonctionnalités : Grâce à une nouvelle API Paragraph, Skia peut maintenant rendre des mises en page de texte riche, en combinant des polices système et des polices personnalisées. Les Animations Hooks facilitent la construction d'animations performantes avec l'intégration déjà existante de RN Reanimated et de Gesture Handler. Un autre point fort pour moi personnellement : RN Skia supporte désormais le web en tant que plateforme, via un package appelé canvaskit-js !
 
 ---
 
 - 💸 [React Universe Conf - Meet the first speakers, and maybe become a speaker yourself? Our CFP is open until March 22. Apply today!](https://www.reactuniverseconf.com/?utm_campaign=React_Universe_Conf&utm_source=email&utm_content=This_Week_in_React)
-- 🐦 [React Navigation 7 will support animations for Bottom Tabs](https://x.com/satya164/status/1766404046036844876?s=20): Number of alpha releases has picked up significantly over the last weeks, so I guess the release is coming close?
-- 📖 [React Native Docs - About the New Architecture](https://reactnative.dev/docs/the-new-architecture/landing-page): We keep hearing “New Architecture” everywhere, and it will be the new default with RN 0.75. This new docs section explains what exactly this new architecture encompasses.
-- 📖 [New docs - Drag Drop Content View](https://expo-drag-drop-content-view.vercel.app/): You might’ve seen this library in last week’s newsletter, now it has shiny new docs.
-- 📜 [Learn Once, Hack Everywhere](https://www.callstack.com/blog/learn-once-hack-everywhere): Interesting glimpse into reverse engineering mobile apps.
+- 🐦 [React Navigation 7 will support animations for Bottom Tabs](https://x.com/satya164/status/1766404046036844876?s=20) : Le nombre de versions alpha a augmenté de manière significative au cours des dernières semaines, donc je suppose que la sortie est proche ?
+- 📖 [React Native Docs - About the New Architecture](https://reactnative.dev/docs/the-new-architecture/landing-page) : Nous n'arrêtons pas d'entendre parler de « New Architecture » partout, et ce sera celle par défaut avec RN 0.75. Cette nouvelle section de la documentation explique en quoi consiste exactement cette nouvelle architecture.
+- 📖 [New docs - Drag Drop Content View](https://expo-drag-drop-content-view.vercel.app/) : Vous avez peut-être vu cette bibliothèque dans la newsletter de la semaine dernière, mais elle a maintenant de nouveaux docs.
+- 📜 [Learn Once, Hack Everywhere](https://www.callstack.com/blog/learn-once-hack-everywhere) : Un regard intéressant sur la rétro-ingénierie des applications mobiles.
 - 📜 [The Hidden Gems of React Native](https://www.reactiive.io/articles/the-hidden-gems-of-react-native)
 - 📜 [Expo - Support for FCM HTTP v1 API](https://expo.dev/blog/expo-adds-support-for-fcm-http-v1-api)
 - 📜 [Expo - Launching EAS Updates with Orbit](https://expo.dev/blog/launching-eas-updates-with-orbit)
@@ -140,7 +140,7 @@ Exciting major release of React Native Skia, with an inspiring launch video! Thi
 - 📜 [Fine-tuning React Performance: A Subtle Insider Tip from a TV App](https://www.bam.tech/article/fine-tuning-react-performance-a-subtle-insider-tip-from-a-tv-app)
 - 📦 [react-native 0.74.0-rc.3](https://github.com/facebook/react-native/releases/tag/v0.74.0-rc.3)
 - 📦 [react-native 0.73.6](https://github.com/facebook/react-native/releases/tag/v0.73.6)
-- 📦 [faster-image](https://github.com/candlefinance/faster-image): New library for fast image rendering, wraps Nuke on iOS and Coil on Android.
+- 📦 [faster-image](https://github.com/candlefinance/faster-image) : Nouvelle bibliothèque pour le rendu rapide d'images, elle intègre Nuke sur iOS et Coil sur Android.
 - 📦 [OP-SQLite 3.0 - Now (optionally) with encryption](https://ospfranco.notion.site/Encryption-58aa9d33736f43e9a53a4f6f9116c36a)
 - 📦 [vision-camera-resize-plugin 2.1.0 - with two new features "mirror" and "rotate"](https://github.com/mrousavy/vision-camera-resize-plugin/releases/tag/v2.1.0)
 - 📦 [react-native-graph 1.1.0 now uses REA values for updating on the UI Thread](https://github.com/margelo/react-native-graph/releases/tag/v1.1.0)
