--- a/website/newsletter/178/index.mdx
+++ b/website/newsletter/178/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /178
-title: "This Week In React #178: ..."
+title: "This Week In React #178: Remix and Vite, Vitest, Type-safe Children, Astro DB, React Compiler, Composition, Remix Nitro, RSC in React Native, TenTap, Expo Atlas, …"
 authors: [slorber]
 date: 03-20-2024
 unlisted: true
@@ -8,7 +8,7 @@ unlisted: true
 
 Hi everyone!
 
-<Todo />
+This last week has not seen a lot of releases, maybe everyone is already saving up their announcements for the upcoming conference season. Astro published more details about their new database and also released a developer portal, which starts out as a theme marketplace but will cover integrations in the future as well. Remix is now Vite-first and Vercel published a new AI chatbot template. After a lot of news about React Server Components in the React section, this week we see some news about RSC in the React Native section.
 
 PROMO CONFS FR
 
@@ -43,9 +43,30 @@ Trusted by corporate clients such as The Weather Channel, Deel.com, La Banque Po
 
 ## ⚛️ React {#react}
 
-<Todo />
+[![Remix Vite-first](/emails/issues/178/remix_heart_vite.jpg)](https://x.com/markdalgleish/status/1770224011831890036)
+
+[Remix is now Vite-first](https://x.com/markdalgleish/status/1770224011831890036)
+
+After a relatively short period of transition where Remix introduced a Vite-integration marked as unstable, this has now been marked stable and immediately became the new default. I personally really enjoyed seeing this quick transition and think Remix plus Vite is a strong combination, and having Vite be the development environment and compiler for Remix allows the Remix team to decrease their surface area and concentrate on core framework capabilities, which is a good thing! A newly created Remix project now only has a Vite config file referencing a Remix plugin, which I think is a beautiful instance of simplification!
 
 - 💸 [Document Generation with Apryse - Transforming Templates into Tailored Documents with React](https://apryse.com/blog/docx-generation-from-templates-react?utm_source=email&utm_medium=newsletter&utm_campaign=thisweekinreact4)
+- 📜 [Vercel: Prioritize production builds available on all plans](https://vercel.com/changelog/prioritize-production-deployments-to-build-before-queued-preview)
+- 📜 [You Can't Make Children "Type Safe" in React & TypeScript](https://www.totaltypescript.com/type-safe-children-in-react-and-typescript)
+- 📜 [How to test React custom hooks and components with Vitest](https://www.thisdot.co/blog/how-to-test-react-custom-hooks-and-components-with-vitest)
+- 📜 [OpenTelemetry in Practice: Instrumenting JavaScript Apps for Tracing](https://marmelab.com/blog/2024/03/14/opentelemetry-in-practice-instrumenting-javascript-apps-for-tracing.html)
+- 📜 [Astro DB: A Deep Dive](https://astro.build/blog/astro-db-deep-dive/): Astro partnered with Turso to integrate libSQL. Also interesting to read why they thought about and ultimately didn’t choose Cloudflare’s D1.
+- 📜 [The Astro Developer Portal](https://astro.build/blog/dev-portal/): An official theme marketplace for Astro.
+- 📜 [How Next.js breaks React Fundamentals](https://ondrejvelisek.github.io/how-nextjs-breaks-react-fundamentals/): I don’t agree with the title and the conclusion, but it’s still an interesting exploration of the limitations of RSC (most of them not specific to Next.js).
+- 📜 [Type system of the React compiler](https://www.recompiled.dev/blog/type-system/): This is quite deep and theoretical, but if you want to learn more about the relation of compilers and type inference, it might be interesting to you.
+- 📜 [Two Types of Composition](https://kyleshevlin.com/two-types-of-composition/): I think sometimes it’s good to revisit the fundamentals of what we’re doing as developers every day. Composition is one of React’s basic principles, and this article looks at the basics of nesting composition and merging composition.
+- 📦 [remix-nitro - An example on how to run Remix with Nitro with HMR using Vite's 5.1 experimental runtime API](https://github.com/alessandrojcm/remix-nitro)
+- 📦 [remix-hono v0.0.16 - now on Hono v4](https://github.com/sergiodxa/remix-hono/releases/tag/v0.0.16)
+- 📦 [Next.js AI Chatbot 2.0 - Now on AI SDK 3.0](https://vercel.com/changelog/next-js-ai-chatbot-2-0)
+- 🎥 [Understanding the Steps of Migrating Your Remix App to Vite.js](https://www.youtube.com/watch?v=CTgQhNFqn5E)
+- 🎥 [Deploying Remix to GitHub Pages](https://www.youtube.com/watch?v=EO_-KwSslWQ)
+- 🎥 [Theo Browne on Million Lint](https://youtu.be/fcY9TthQnI4?si=bROdHJmIumw24AlO)
+- 🎙️ [Rocket Ship #034 - React Architecture Tips with Charlotte Isambert](https://share.transistor.fm/s/48a4b223)
+- 🎙️ [PodRocket - Partial pre-rendering in Next.js with Delba de Oliveira and Wyatt Johnson](https://podrocket.logrocket.com/partial-pre-rendering-next-js-delba-oliveira-wyatt-johnson)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -80,22 +101,46 @@ TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/
 
 ## 📱 React-Native {#react-native}
 
-<Todo />
+This section is now co-authored with Benedikt. Feel free to send us your comments by email or on Twitter!
+
+[![React Native RSC](/emails/issues/178/rn_rsc.jpg)](https://github.com/mui/material-ui/tree/master/packages/pigment-css-react)
+
+🐦 [Demo of React Server Components on React Native](https://x.com/SzymonRybczak/status/1769747995862384756)
+
+Conference season is coming up, and the announcements get fewer as people are saving the best for the big stages. One of the topics I’m looking most forward to hearing more about at the upcoming conferences is React Server Components on React Native. Now Szymon Rybczak from Callstack has published an interesting demo of RSC running in RN. I’m really curious to learn more about it, and glad that Szymon has announced that he’ll publish a detailed blog post and the code soon.
 
 - 💸 [React Universe Conf - Last days to submit talk proposals: CFP closes on March 22. Don’t want to speak at RUC? Grab your early bird ticket!](https://www.reactuniverseconf.com/?utm_campaign=React_Universe_Conf&utm_source=email&utm_content=This_Week_in_React)
+- 📖 [Expo Docs: Migrate from CodePush](https://docs.expo.dev/eas-update/codepush/): Visual Studio App Center is scheduled for retirement on March 31, 2025. Users of CodePush should start thinking about alternatives.
+- 📜 [What is the Expo Router?](https://www.themorrow.digital/blog/what-is-the-expo-router?utm_campaign=blog&utm_source=twitter)
+- 📜 [React navigation & state machine - Perfecting app flows](https://www.bam.tech/article/react-navigation-state-machine-perfecting-app-flows): Interesting exploration of how to realize complex flows in React Navigation, using either a state machine or a custom navigator.
+- 📜 [Expo Blog - 12 tips for setting up your next Expo project](https://expo.dev/blog/12-tips-for-setting-up-your-next-expo-project): Some of them quite obvious (use TS), but others like app variants for dev and prod or automatic build versioning are valuable reminders.
+- 📜 [Ship OTA (Over-The-Air) When in an Emergency](https://www.callstack.com/blog/ship-over-the-air-when-in-an-emergency)
+- 📦 [TenTap - typed, customizable, and extendable Rich Text editor for React Native](https://github.com/10play/10tap-editor)
+- 📦 [React Native 0.74.0-rc.4](https://github.com/facebook/react-native/releases/tag/v0.74.0-rc.4)
+- 📦 [expo-atlas - Experimental library to inspect bundle stats from Metro](https://github.com/byCedric/expo-atlas)
+- 📦 [First Expo SDK 51 canary releases showing up](https://www.npmjs.com/package/expo/v/51.0.0-canary-20240318-dd8f245)
+- 🎙️ [RNR 291 - RNR Explains: The Dev Menu](https://reactnativeradio.com/episodes/rnr-291-rnr-explains-the-dev-menu)
+- 🎥 [The Best Stack for Universal React Apps](https://www.youtube.com/watch?v=2yvjgwTZOUY)
+- 🎥 [Let’s build a Native Library using Expo Modules](https://www.youtube.com/watch?v=UczTzTBYRhA)
+- 🎥 [How to create an App Icon and Splash Screen for an Expo Project](https://www.youtube.com/watch?v=QSNkU7v0MPc)
 
 ---
 
 ## 🔀 Other {#other}
 
-<Todo />
+- [TypeScript 5.5: Infer type predicates from function bodies using control flow analysis](https://github.com/microsoft/TypeScript/pull/57465)
+- [Improved Cloudflare Workers testing via Vitest and workerd](https://blog.cloudflare.com/workers-vitest-integration/?utm_campaign=cf_blog&utm_content=20240314&utm_medium=organic_social&utm_source=twitter)
+- [Build a Node App with TypeScript](https://www.totaltypescript.com/typescript-and-node)
+- [Type Predicate Inference: The TS 5.5 Feature No One Expected](https://www.totaltypescript.com/type-predicate-inference)
+- [Hide extension requests plus more Network panel improvements](https://developer.chrome.com/blog/network-panel-improvements?hl=en)
+- [require(esm) in Node.js](https://joyeecheung.github.io/blog/2024/03/18/require-esm-in-node-js/)
+- [Comparing ECMAScript Modules and CommonJS](https://wanago.io/2024/03/18/ecmascript-modules-esm-commonjs/)
+- [Announcing Rsbuild v0.5](https://rsbuild.dev/community/releases/v0-5)
 
 ---
 
 ## 🤭 Fun {#fun}
 
-<Todo />
-
-[![alt](/emails/issues/122/meme.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![Dropped Animation Frames](/emails/issues/178/meme.jpg)](https://github.com/mui/material-ui/tree/master/packages/pigment-css-react)
 
 See ya! 👋
