--- a/website/newsletter/178/index.mdx
+++ b/website/newsletter/178/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /178
-title: "This Week In React #178: Remix and Vite, Vitest, Type-safe Children, Astro DB, React Compiler, Composition, Remix Nitro, RSC in React Native, TenTap, Expo Atlas, TypeScript, Elysia..."
+title: "This Week In React #178: Remix and Vite, Type-safe Children, Astro DB, React Compiler, Firebolt, Vitest, Composition, Remix Nitro, RSC in React Native, TenTap, Expo Atlas, TypeScript, Elysia..."
 authors: [slorber]
 date: 03-20-2024
 unlisted: true
