--- a/website/newsletter/178/index.mdx
+++ b/website/newsletter/178/index.mdx
@@ -116,6 +116,7 @@ Conference season is coming up, and the announcements get fewer as people are sa
 - 📦 [TenTap - typed, customizable, and extendable Rich Text editor for React Native](https://github.com/10play/10tap-editor)
 - 📦 [React Native 0.74.0-rc.4](https://github.com/facebook/react-native/releases/tag/v0.74.0-rc.4)
 - 📦 [expo-atlas - Experimental library to inspect bundle stats from Metro](https://github.com/byCedric/expo-atlas)
+- 🐦 [New Expo Dev tools plugin for debugging React Native MMKV](https://twitter.com/BonacciniCyril/status/1770409141690900660)
 - 📦 [First Expo SDK 51 canary releases showing up](https://www.npmjs.com/package/expo/v/51.0.0-canary-20240318-dd8f245)
 - 🎙️ [RNR 291 - RNR Explains: The Dev Menu](https://reactnativeradio.com/episodes/rnr-291-rnr-explains-the-dev-menu)
 - 🎥 [The Best Stack for Universal React Apps](https://www.youtube.com/watch?v=2yvjgwTZOUY)
