--- a/website/newsletter/178/index.mdx
+++ b/website/newsletter/178/index.mdx
@@ -8,6 +8,10 @@ unlisted: true
 
 Hi everyone!
 
+This week is different and important for me. I took a little newsletter break, and instead of having no issue (as I did before), it's [Benedikt](https://twitter.com/bndkt) writing the whole newsletter this time!
+
+---
+
 This last week has not seen a lot of releases, maybe everyone is already saving up their announcements for the upcoming conference season. Astro published more details about their new database and also released a developer portal, which starts out as a theme marketplace but will cover integrations in the future as well. Remix is now Vite-first and Vercel published a new AI chatbot template. After a lot of news about React Server Components in the React section, this week we see some news about RSC in the React Native section.
 
 <!-- truncate -->
@@ -98,8 +102,6 @@ TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/
 ---
 
 ## 📱 React-Native {#react-native}
-
-This section is now co-authored with Benedikt. Feel free to send us your comments by email or on Twitter!
 
 [![React Native RSC](/emails/issues/178/rn_rsc.jpg)](https://github.com/mui/material-ui/tree/master/packages/pigment-css-react)
 
