--- a/website/newsletter/178/index.mdx
+++ b/website/newsletter/178/index.mdx
@@ -47,7 +47,7 @@ Trusted by corporate clients such as The Weather Channel, Deel.com, La Banque Po
 
 [![Remix Vite-first](/emails/issues/178/remix_heart_vite.jpg)](https://twitter.com/markdalgleish/status/1770224011831890036)
 
-[**Remix is now Vite-first**](https://twitter.com/markdalgleish/status/1770224011831890036)
+🐦 [**Remix is now Vite-first**](https://twitter.com/markdalgleish/status/1770224011831890036)
 
 After a relatively short period of transition where Remix introduced a Vite-integration marked as unstable, this has now been marked stable and immediately became the new default. I personally really enjoyed seeing this quick transition and think Remix plus Vite is a strong combination, and having Vite be the development environment and compiler for Remix allows the Remix team to decrease their surface area and concentrate on core framework capabilities, which is a good thing! A newly created Remix project now only has a Vite config file referencing a Remix plugin, which I think is a beautiful instance of simplification!
 
@@ -118,7 +118,7 @@ Conference season is coming up, and the announcements get fewer as people are sa
 - 📦 [TenTap - typed, customizable, and extendable Rich Text editor for React Native](https://github.com/10play/10tap-editor)
 - 📦 [React Native 0.74.0-rc.4](https://github.com/facebook/react-native/releases/tag/v0.74.0-rc.4)
 - 📦 [expo-atlas - Experimental library to inspect bundle stats from Metro](https://github.com/byCedric/expo-atlas)
-- 🐦 [New Expo Dev tools plugin for debugging React Native MMKV](https://twitter.com/BonacciniCyril/status/1770409141690900660)
+- 📦 [New Expo Dev tools plugin for debugging React Native MMKV](https://www.npmjs.com/package/@dev-plugins/react-native-mmkv)
 - 📦 [First Expo SDK 51 canary releases showing up](https://www.npmjs.com/package/expo/v/51.0.0-canary-20240318-dd8f245)
 - 🎙️ [RNR 291 - RNR Explains: The Dev Menu](https://reactnativeradio.com/episodes/rnr-291-rnr-explains-the-dev-menu)
 - 🎥 [The Best Stack for Universal React Apps](https://www.youtube.com/watch?v=2yvjgwTZOUY)
