--- a/website/newsletter/178/index.mdx
+++ b/website/newsletter/178/index.mdx
@@ -145,6 +145,6 @@ Conference season is coming up, and the announcements get fewer as people are sa
 
 ## 🤭 Fun {#fun}
 
-[![Dropped Animation Frames](/emails/issues/178/meme.jpg)](https://github.com/mui/material-ui/tree/master/packages/pigment-css-react)
+[![Dropped Animation Frames](/emails/issues/178/meme.jpg)](https://twitter.com/ryanflorence/status/1769842701904822774)
 
 See ya! 👋
