--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/178/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/178/index.mdx
@@ -59,20 +59,13 @@ Trusted by corporate clients such as The Weather Channel, Deel.com, La Banque Po
 
 A complete form solution for React projects, used by Fortune 500 companies. With easy-to-use open-source components for building and running powerful forms inside your React app. Extensively documented, up in minutes, and deeply customizable.
 
-*   Builder for creating powerful forms;
-    
-*   Runner for deploying forms and collecting data;
-    
-*   Flexible form layouts (conversational, chat etc.) and styling;
-    
-*   Extensible with custom question types;
-    
-*   Complete docs, examples, and demos;
-    
-*   Self-hosted without external dependencies;
-    
-*   Start, test, and perfect for free.
-    
+- Builder for creating powerful forms;
+- Runner for deploying forms and collecting data;
+- Flexible form layouts (conversational, chat etc.) and styling;
+- Extensible with custom question types;
+- Complete docs, examples, and demos;
+- Self-hosted without external dependencies;
+- Start, test, and perfect for free.
 
 TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/sdk/this-week-in-react/?utm_source=thisweekinreact&utm_medium=sponsor&utm_campaign=sdk).
 
@@ -88,11 +81,10 @@ TWIR exclusive: [Get 25% off your FormBuilder SDK license](https://tripetto.com/
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
-
-💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
+- 🇫🇷 [ReactHebdo.fr - Dernières éditions traduites en français](https://thisweekinreact.com/fr/newsletter)
+- 📜 [Embarquez vos sites Web dans une application React Native avec les WebViews](https://www.premieroctet.com/blog/webview-react-native)
+- 🎥 [Créer une Plateforme SaaS avec Next.js 14, React, Prisma, Stripe, Tailwind | Cours complet 2024](https://www.youtube.com/watch?v=Ec7DBO8upO4)
+- 🎥 [Pourquoi React n’aura jamais de Signaux](https://www.youtube.com/watch?v=TK6_v6xCv6Y)
 
 ---
 
