--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/_template/index.mdx
@@ -50,11 +50,7 @@ import Support from "../_support.mdx";
 
 ## 🇫🇷 En français {#fr}
 
-<Todo />
-
-💡Tu peux m'envoyer ton contenu: [sebastien@thisweekinreact.com](mailto:sebastien@thisweekinreact.com?subject=Contenu%20en%20fran%C3%A7ais) !
-
-<Todo />
+- 🇫🇷 [ReactHebdo.fr - Dernières éditions traduites en français](https://thisweekinreact.com/fr/newsletter)
 
 ---
 
